# Project

./: main.py  pyproject.toml  simple.py
project.egg-info/: PKG-INFO  SOURCES.txt
