[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
authors = [
    {name = "Khanh Toan", email = "khanhtoanlenguyen288@gmail.com"}
]
description = "package description"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests > 2.26.0",
    "pandas"
]
[tool.setuptools]
packages = ["untils"]